syntax = "proto3";

package com.chinamobiad.adx.idl;

option optimize_for = SPEED;

message AdxDspData{
    string request_id       = 1;
    int32 dsp_code          = 2;
    int64 dsp_app_id        = 3;
    AdType ad_type          = 4;
    bytes data              = 5;
    DspDataType data_type   = 6;
    string method           = 7;
    string url              = 8;
    int64  now              = 9;
}
enum DspDataType {
    UNKNOWN_DATA_TYPE       = 0;
    DSP_REQ                 = 1;
    DSP_RES                 = 2;
    DSP_FINAL_RES           = 3;
}
// 广告类型
enum AdType {
    UNKNOWN_AD_TYPE = 0;  // 未知类型
    BANNER          = 1;  // 横幅
    INTERSTITIAL    = 2;  // 插页
    SPLASH          = 3;  // 开屏
    NATIVE          = 4;  // 信息流, 原生广告
}